# text-clustering

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  Makefile  README.md  important_command.md  pyproject.toml  requirements.txt  setup.py  tox.ini
configs/: .gitignore  .secrets.yaml  settings.yaml
data/interim/: doubt_withought_tags.csv
interfaces/command-line/: pyprojectcli.py  setuptoolcli.py
interfaces/restful apis/: fast_api.py  flask_api.py
models/: .gitignore  model.pkl
notebooks/.ipynb_checkpoints/: Supervise_algorithms-checkpoint.ipynb  Unsupervise-algorithms-checkpoint.ipynb  Web_scraping-checkpoint.ipynb
notebooks/Data_scrap_EDA_model_selection/: About_phishing_nonphishing_websites.ipynb  Hybrid_algorithms.ipynb  Rule_based_algorithms.ipynb  Unsupervise-algorithms.ipynb  Web_scraping.ipynb
notebooks/QA_ursula_and_vision/: QA_analysis.ipynb  dec01_bitly_not_phishing.xlsx - dec01_bitly_not_phishing.xlsx.csv  dec01_wvision_bitly_phishing.xlsx - dec01_bitly_phishing.xlsx.csv  dec02_bitly_not_phishing.xlsx - dec02_wvision_bitly_not_phishin.csv  dec02_bitly_phishing.xlsx - dec02_wvision_bitly_phishing.xl.csv  dec07_wvision_bitly_not_phishing.xlsx - dec07_wvision_bitly_not_phishin.csv  dec07_wvision_bitly_phishing.xlsx - dec07_wvision_bitly_phishing.csv  dec08_bitly_not_phishings.xlsx - dec08_bitly_not_phishings.xlsx.csv  dec08_bitly_phishing.xlsx - dec08_bitly_phishing.xlsx.csv  dec09_bitly_not_phishing.xlsx - dec09_bitly_not_phishing.xlsx.csv  (+23 more)
src/: __init__.py
src/utils/: aws.py  (+3 more)
testing/: test_model.py
(+1043 files in other folders)
